--- a/src/App/Client/GoldEx.Client.Components/GoldEx.Client.Components.csproj
+++ b/src/App/Client/GoldEx.Client.Components/GoldEx.Client.Components.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Extensions.MudBlazor.StaticInput" Version="3.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.1" />
     <PackageReference Include="MudBlazor" Version="8.1.0" />
   </ItemGroup>
