Add Google login support and refactor auth processes

--- a/src/App/Server/GoldEx.Server/appsettings.Development.json
+++ b/src/App/Server/GoldEx.Server/appsettings.Development.json
@@ -13,5 +13,11 @@
       "Microsoft.EntityFrameworkCore.Database": "Warning",
       "Microsoft.EntityFrameworkCore.ChangeTracking": "Warning"
     }
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "256234966472-977uc1tig7nruihalbfv7era0pofu30j.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
   }
 }
