--- a/src/Sdk/GoldEx.Sdk.Client/GoldEx.Sdk.Client.csproj
+++ b/src/Sdk/GoldEx.Sdk.Client/GoldEx.Sdk.Client.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\GoldEx.Sdk.Common\GoldEx.Sdk.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstractions\" />
+  </ItemGroup>
+
 </Project>
