--- a/src/App/Client/GoldEx.Client.Components/GoldEx.Client.Components.csproj
+++ b/src/App/Client/GoldEx.Client.Components/GoldEx.Client.Components.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Extensions.MudBlazor.StaticInput" Version="3.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.1" />
     <PackageReference Include="MudBlazor" Version="8.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.1" />
@@ -23,6 +24,21 @@
   <ItemGroup>
 	  <ProjectReference Include="..\..\..\Sdk\GoldEx.Sdk.Client\GoldEx.Sdk.Client.csproj" />
 	  <ProjectReference Include="..\..\Shared\GoldEx.Shared\GoldEx.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Components\Resources\GoldExComponentBase.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>GoldExComponentBase.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Components\Resources\GoldExComponentBase.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>GoldExComponentBase.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
