Refactor UI and update dependencies
- Added `MailKit` and `Microsoft.EntityFrameworkCore.SqlServer` package references to `GoldEx.Server.Infrastructure.csproj`.
- Cleaned up `IdentityNoOpEmailSender.cs` by removing redundant namespace declarations and comments.
- Updated several Razor components (`AccessDenied.razor`, `ConfirmEmail.razor`, `ConfirmEmailChange.razor`, `ExternalLogin.razor`, `ForgotPassword.razor`, `ForgotPasswordConfirmation.razor`, `InvalidPasswordReset.razor`, `InvalidUser.razor`, and `Lockout.razor`) to use `EmptyBoxLayout` and redesigned them with `MudStack`, `MudItem`, and `MudImage` for a consistent and modern UI.
- Improved status messages and form elements in relevant components for better user experience and clarity.

--- a/src/App/Shared/GoldEx.Shared/GoldEx.Shared.csproj
+++ b/src/App/Shared/GoldEx.Shared/GoldEx.Shared.csproj
@@ -8,6 +8,8 @@
 
 	<ItemGroup>
 		<Folder Include="Extensions\" />
+		<Folder Include="DTOs\" />
+		<Folder Include="Settings\" />
 	</ItemGroup>
 
 	<ItemGroup>
