--- a/src/App/Client/GoldEx.Client/GoldEx.Client.csproj
+++ b/src/App/Client/GoldEx.Client/GoldEx.Client.csproj
@@ -7,10 +7,20 @@
 		<NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
 		<StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
 		<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
+				<ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
 	</PropertyGroup>
 
+	
+	<ItemGroup>
+  		<ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+	</ItemGroup>
+	              
 	<ItemGroup>
 		<ProjectReference Include="..\GoldEx.Client.Components\GoldEx.Client.Components.csproj" />
+	</ItemGroup>
+	              
+	<ItemGroup>
+	  <Folder Include="wwwroot\assets\screenshots\" />
 	</ItemGroup>
 
 </Project>
