Add price aggregate with it's repository and services. Add hosted services to fetch price from api and add it to db

--- a/src/Sdk/GoldEx.Sdk.Server/GoldEx.Sdk.Server.csproj
+++ b/src/Sdk/GoldEx.Sdk.Server/GoldEx.Sdk.Server.csproj
@@ -21,6 +21,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include="Infrastructure\DTOs\Enums\" />
 		<Folder Include="Infrastructure\Extensions\Configurations\" />
 	</ItemGroup>
 
