--- a/src/App/Server/GoldEx.Server.Domain/GoldEx.Server.Domain.csproj
+++ b/src/App/Server/GoldEx.Server.Domain/GoldEx.Server.Domain.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\..\Shared\GoldEx.Shared\GoldEx.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="PriceAggregate\" />
+  </ItemGroup>
+
 </Project>
