--- a/src/App/Server/GoldEx.Server.Infrastructure/GoldEx.Server.Infrastructure.csproj
+++ b/src/App/Server/GoldEx.Server.Infrastructure/GoldEx.Server.Infrastructure.csproj
@@ -16,4 +16,8 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Repositories\Abstractions\" />
+	</ItemGroup>
+
 </Project>
