Show Price on price board and update every 30 second

--- a/src/App/Client/GoldEx.Client/GoldEx.Client.csproj
+++ b/src/App/Client/GoldEx.Client/GoldEx.Client.csproj
@@ -20,6 +20,7 @@
 	</ItemGroup>
 	              
 	<ItemGroup>
+	  <Folder Include="Pages\Home\ViewModels\" />
 	  <Folder Include="wwwroot\assets\screenshots\" />
 	</ItemGroup>
 
