--- a/src/App/Shared/GoldEx.Shared/GoldEx.Shared.csproj
+++ b/src/App/Shared/GoldEx.Shared/GoldEx.Shared.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<Folder Include="Extensions\" />
 		<Folder Include="DTOs\" />
+		<Folder Include="Services\" />
 		<Folder Include="Settings\" />
 	</ItemGroup>
 
