--- a/src/App/Server/GoldEx.Server/GoldEx.Server.csproj
+++ b/src/App/Server/GoldEx.Server/GoldEx.Server.csproj
@@ -10,6 +10,11 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Client\GoldEx.Client\GoldEx.Client.csproj" />
     <ProjectReference Include="..\GoldEx.Server.Application\GoldEx.Server.Application.csproj" />
+    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="9.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="9.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="9.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="9.0.0" />
     <PackageReference Include="Google.Apis.Auth.AspNetCore3" Version="1.69.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.2" />
