--- a/src/App/Client/GoldEx.Client.Components/GoldEx.Client.Components.csproj
+++ b/src/App/Client/GoldEx.Client.Components/GoldEx.Client.Components.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.2" />
     <PackageReference Include="MudBlazor" Version="8.2.0" />
+    <PackageReference Include="Bit.Besql" Version="9.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="9.0.2" />
   </ItemGroup>
