--- a/src/Sdk/GoldEx.Sdk.Server/GoldEx.Sdk.Server.csproj
+++ b/src/Sdk/GoldEx.Sdk.Server/GoldEx.Sdk.Server.csproj
@@ -19,6 +19,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include="Application\Extensions\" />
 		<Folder Include="Infrastructure\Extensions\Configurations\" />
 	</ItemGroup>
 
