--- a/src/App/Client/GoldEx.Client/GoldEx.Client.csproj
+++ b/src/App/Client/GoldEx.Client/GoldEx.Client.csproj
@@ -17,6 +17,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\GoldEx.Client.Components\GoldEx.Client.Components.csproj" />
+		<ProjectReference Include="..\GoldEx.Client.Services\GoldEx.Client.Services.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
