--- a/src/App/Client/GoldEx.Client.Components/GoldEx.Client.Components.csproj
+++ b/src/App/Client/GoldEx.Client.Components/GoldEx.Client.Components.csproj
@@ -13,9 +13,9 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
-    <PackageReference Include="Extensions.MudBlazor.StaticInput" Version="3.1.0" />
+    <PackageReference Include="Extensions.MudBlazor.StaticInput" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.2" />
-    <PackageReference Include="MudBlazor" Version="8.2.0" />
+    <PackageReference Include="MudBlazor" Version="8.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="9.0.2" />
   </ItemGroup>
@@ -23,6 +23,7 @@
   <ItemGroup>
 	  <ProjectReference Include="..\..\..\Sdk\GoldEx.Sdk.Client\GoldEx.Sdk.Client.csproj" />
 	  <ProjectReference Include="..\..\Shared\GoldEx.Shared\GoldEx.Shared.csproj" />
+	  <ProjectReference Include="..\GoldEx.Client.Abstractions\GoldEx.Client.Abstractions.csproj" />
 	  <ProjectReference Include="..\GoldEx.Client.Offline\GoldEx.Client.Offline.csproj" />
   </ItemGroup>
 
