--- a/src/App/Shared/GoldEx.Shared/GoldEx.Shared.csproj
+++ b/src/App/Shared/GoldEx.Shared/GoldEx.Shared.csproj
@@ -18,6 +18,7 @@
 		<PackageReference Include="MediatR" Version="12.4.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.2" />
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
