--- a/src/App/Client/GoldEx.Client.Offline/GoldEx.Client.Offline.csproj
+++ b/src/App/Client/GoldEx.Client.Offline/GoldEx.Client.Offline.csproj
@@ -13,6 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include="Domain\SettingsAggregate\" />
 		<Folder Include="Domain\ProductAggregate\" />
 	</ItemGroup>
 
