--- a/src/App/Shared/GoldEx.Shared/GoldEx.Shared.csproj
+++ b/src/App/Shared/GoldEx.Shared/GoldEx.Shared.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<Folder Include="Application\Validators\Settings\" />
 		<Folder Include="Extensions\" />
 		<Folder Include="Services\" />
 		<Folder Include="Settings\" />
