--- a/src/App/Server/GoldEx.Server/GoldEx.Server.csproj
+++ b/src/App/Server/GoldEx.Server/GoldEx.Server.csproj
@@ -20,6 +20,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.3" />
 		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="9.0.3" />
+		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.6.1" />
 		<PackageReference Include="Net.Codecrete.QrCodeGenerator" Version="2.0.6" />
 		<PackageReference Include="Serilog.UI" Version="3.1.0" />
 		<PackageReference Include="Serilog.UI.MsSqlServerProvider" Version="3.1.0" />
