--- a/src/App/Client/GoldEx.Client.Services/GoldEx.Client.Services.csproj
+++ b/src/App/Client/GoldEx.Client.Services/GoldEx.Client.Services.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Sdk\GoldEx.Sdk.Client\GoldEx.Sdk.Client.csproj" />
     <ProjectReference Include="..\GoldEx.Client.Abstractions\GoldEx.Client.Abstractions.csproj" />
     <ProjectReference Include="..\GoldEx.Client.Offline\GoldEx.Client.Offline.csproj" />
   </ItemGroup>
