Add transaction creation logic

--- a/src/App/Server/GoldEx.Server.Domain/GoldEx.Server.Domain.csproj
+++ b/src/App/Server/GoldEx.Server.Domain/GoldEx.Server.Domain.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="TransactionAggregate\" />
     <Folder Include="SettingsAggregate\" />
   </ItemGroup>
 
