--- a/src/App/Client/GoldEx.Client/GoldEx.Client.csproj
+++ b/src/App/Client/GoldEx.Client/GoldEx.Client.csproj
@@ -22,6 +22,7 @@
 
 	<ItemGroup>
 		<Folder Include="Pages\Home\ViewModels\" />
+		<Folder Include="Pages\Transactions\Validators\" />
 		<Folder Include="wwwroot\assets\screenshots\" />
 	</ItemGroup>
 
