Make application running

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /src/App/Server/GoldEx.Server/appsettings.Development.json
+
+/src/App/Server/GoldEx.Server/uploads/*
