--- a/src/App/Server/GoldEx.Server/appsettings.json
+++ b/src/App/Server/GoldEx.Server/appsettings.json
@@ -66,7 +66,8 @@
     "PhoneNumber": "09905492104",
     "TaxPercent": 9,
     "GoldProfitPercent": 7,
-    "JewelryProfitPercent": 20
+    "JewelryProfitPercent": 20,
+    "PriceUpdateInterval": "00:00:30" 
   },
   "UserSetting": {
     "UserName": "admin",
