Nuget update. fix login issue

--- a/src/App/Server/GoldEx.Server/appsettings.json
+++ b/src/App/Server/GoldEx.Server/appsettings.json
@@ -38,7 +38,8 @@
       "Override": {
         "System": "Warning",
         "Microsoft": "Warning",
-        "Microsoft.AspNetCore": "Warning"
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information"
       }
     },
     "WriteTo": [
@@ -67,12 +68,12 @@
     "TaxPercent": 9,
     "GoldProfitPercent": 7,
     "JewelryProfitPercent": 20,
-    "PriceUpdateInterval": "00:00:30" 
+    "PriceUpdateInterval": "00:00:30"
   },
   "UserSetting": {
-    "UserName": "admin",
+    "UserName": "admin@admin.com",
     "Email": "admin@admin.com",
     "PhoneNumber": "09905492104",
-    "Password": "admin"
+    "Password": "admin123"
   }
 }
