Add Invoice Aggreage, implement payment method functionality

--- a/src/App/Server/GoldEx.Server.Application/GoldEx.Server.Application.csproj
+++ b/src/App/Server/GoldEx.Server.Application/GoldEx.Server.Application.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\GoldEx.Server.Infrastructure\GoldEx.Server.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Validators\Invoices\" />
+  </ItemGroup>
+
 </Project>
