Add old gold carat in settings

--- a/src/App/Server/GoldEx.Server/appsettings.json
+++ b/src/App/Server/GoldEx.Server/appsettings.json
@@ -68,6 +68,8 @@
     "TaxPercent": 9,
     "GoldProfitPercent": 7,
     "JewelryProfitPercent": 20,
+    "GoldSafetyMarginPercent": 0,
+    "OldGoldCarat": 735,
     "PriceUpdateInterval": "00:00:30"
   },
   "UserSetting": {
