--- a/src/App/Server/GoldEx.Server.Application/GoldEx.Server.Application.csproj
+++ b/src/App/Server/GoldEx.Server.Application/GoldEx.Server.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DevExpress.AspNetCore.Reporting" Version="24.2.7" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.11.0" />
   </ItemGroup>
 
