Progress on implementing invoice report

--- a/src/App/Server/GoldEx.Server/GoldEx.Server.csproj
+++ b/src/App/Server/GoldEx.Server/GoldEx.Server.csproj
@@ -47,4 +47,10 @@
 	  <Folder Include="uploads\icons\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="Reports\InvoiceReport.repx">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
